fix: post archives page - on tablet/mobile/laptop

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,7 +10,7 @@
     #banner {
         margin-top : $spacing-unit;
 
-         @include media-query($on-palm) {
+         @include media-query($on-mobile) {
            h1 {text-align: center;}
          }
 
@@ -30,8 +30,8 @@
 
 .site-nav {
     @include micro-header;
-    width: 10%;
-    padding-right: 9%;
+    // width: 10%;
+    padding-right: 5%;
     padding-top: $spacing-micro-unit + 10px;
     margin-right: $spacing-unit;
 
@@ -44,8 +44,26 @@
         }
     }
 
-    @include media-query($on-palm) {
+    @include media-query($on-mobile) {
+        width: 100%;
+        margin: 0px;
+        text-align: center;
 
+        ul  {
+            margin: 0 auto;
+
+            li {
+                display: inline;
+                text-align: center;
+                // float: left;
+                &:not(:first-child) {
+                    margin-left: $spacing-unit;
+                }
+            }
+        }
+    }
+
+    @include media-query($on-tablet) {
         width: 100%;
         margin: 0px;
         text-align: center;
@@ -74,7 +92,7 @@
         margin: 0;
         list-style: none;
 
-        @include media-query($on-palm) {
+        @include media-query($on-mobile) {
             width: 100%;
         }
 
@@ -111,7 +129,16 @@
     float: left;
 }
 
-@include media-query($on-palm) {
+@include media-query($on-tablet) {
+    .post-meta-index {
+        font-size: 12px;
+    }
+    .post-link-index {
+        font-size: 16px;
+    }
+}
+
+@include media-query($on-mobile) {
     .post-meta-index {
         font-size: 10px;
         width: 14%;
@@ -249,7 +276,7 @@
     }
 }
 
-@include media-query($on-palm) {
+@include media-query($on-mobile) {
     .footer-col {
         float: none;
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
