--- a/css/main.scss
+++ b/css/main.scss
@@ -32,18 +32,16 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 
+$on-mobile:        420px;
+$on-tablet:        685px;
+$on-laptop:        720px;
+
 // Width of the content area
-$content-width:         800px;
-$page-content-width:    535px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
+$content-width:         720px;
+$page-content-width:    530px;
 
 // Using media queries with like this:
-// @include media-query($on-palm) {
+// @include media-query($on-mobile) {
 //     .wrapper {
 //         padding-right: $spacing-unit / 2;
 //         padding-left: $spacing-unit / 2;
